# ecg_curves

./: CMakeLists.txt
include/: application.h
src/: abstract_curve.cpp  application.cpp  bezier_curve.cpp  bspline.cpp  control_points_editor.cpp  curve_renderer.cpp  hermite_spline.cpp  lagrange_curve.cpp  main.cpp
